fixed issue with jumping transitions

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -218,7 +218,7 @@ body {
   display: flex;
   min-height: 270px;
   overflow: hidden;
-  transition: 0.8s height cubic-bezier(.77,0,.175,1) 0.6s;
+  transition: 0.8s height cubic-bezier(.77,0,.175,1) 0.5s;
 }
 
 .work-item-content {
@@ -518,12 +518,12 @@ body {
 ///////
 
 #work-header {
-  transition: 1s width cubic-bezier(.77,0,.175,1) 0.2s;
+  transition: 0.5s width cubic-bezier(.77,0,.175,1);
 }
 
 .work-content {
-  transition: 1s width cubic-bezier(.77,0,.175,1) 0.2s;
-  transition: 1s left cubic-bezier(.77,0,.175,1) 0.2s;
+  transition: 0.5s cubic-bezier(.77,0,.175,1);
+
 }
 
 .minimized {
